# Kozy_CPP_Library

./: .gitignore  CMakeLists.txt  KozyLibrary_Complete.hpp  KozyLibrary_DataStructures.hpp  KozyLibrary_Math.hpp  README.md
DataStructures/: CompileTime_String.hpp  Image_PixelArray.hpp  K_Tree.hpp  OptionalMember.hpp  ThreadPool.hpp
FullAndPartialTests/: Test_compiling_all.cpp
Math/: Basic_Math.hpp
Test/: Test_K_Tree.cpp  Test_ThreadPool.cpp  Test_compiling_all.cpp
test/: compileTest.cpp
test/DataStructures/: compileTime_String_Test.cpp
